# acha-spyware

./: .gitmodules  Documentação-traduzida-MVT  Documentação-traduzida-MVT.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
api/: __init__.py  config.py
api/controllers/: __init__.py  config_controller.py  middleware.py  mvt_controller.py
api/exceptions/: __init__.py  base.py  command_executor.py  config.py  config_except.py  log_parse.py  log_parse_except.py  mvt.py  mvt_android_except.py
api/interfaces/: command_executor_interface.py  config_interface.py  mvt_interface.py
api/models/: __init__.py  device.py
api/models/types/: exception.py  schemas.py  types.py
api/resources/: all_logs_mvt.txt  log_message_patterns.json
api/services/: command_executor.py  config_service.py  log_parser.py  mvt_service.py
api/views/: android_routes.py  views.py
app/controllers/: mvt_controller.py
app/models/: device.py
app/views/: android_routes.py
configuration/: settings.py
core/: logger.py
documentation/: API_REFERENCE.md  LIMIT_CASES.md  error_codes.md
frontend/: index.html  info.html  report.html
frontend/static/css/: styles.css
frontend/static/js/: btn-back.js  scripts.js
scripts/: generate_erro_doc.py
setup/: fvm_install.nsi  install_ova.ps1  mvt_vm_installer.iss  setup_wsl.py
tests/: test_controller.py  test_models.py  test_routes.py
